fixed album cover stretch

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="pink">#ffc0cb</color>
     <color name="yellow">#ffff00</color>
     <color name="cool_blue">#6b6bff</color>
+    <color name="gray">#808080</color>
 </resources>
