--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,10 @@
         android:backgroundTint="@color/rust"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        tools:layout_editor_absoluteX="84dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 
         <!-- Logo Image -->
@@ -27,7 +29,7 @@
             android:id="@+id/mmlogo"
             android:layout_width="80dp"
             android:layout_height="75dp"
-            android:layout_marginLeft="85dp"
+            android:layout_marginStart="85dp"
             android:padding="8dp"
             android:scaleType="fitXY"
             android:src="@drawable/new_logo"
@@ -40,7 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
-            android:paddingStart="8dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:text="@string/MixMaker"
             android:textColor="@android:color/white"
             android:textSize="28sp"
@@ -55,19 +58,22 @@
         android:layout_height="150dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="104dp"
-        android:src="@drawable/taylor"
+        android:background="@color/gray"
         android:padding="5dp"
-        android:background="@color/cool_blue"
+        android:src="@drawable/taylor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Song 2 -->
 
     <TextView
         android:id="@+id/song1Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="4dp"
         android:text="Lover"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/taylor"
@@ -77,11 +83,12 @@
         android:id="@+id/addToPlaylist1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="@color/rust"
         android:onClick="addToPlaylist"
         android:text="Add to Playlist"
+        android:textColor="@color/white"
         android:textColorHighlight="#2196F3"
         android:textColorLink="#CD2626"
         app:layout_constraintStart_toEndOf="@+id/taylor"
@@ -89,17 +96,16 @@
         app:rippleColor="#80FFFFFF"
         app:strokeColor="#CDDC39" />
 
-    <!-- Song 2 -->
     <ImageView
         android:id="@+id/edsheeran"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
-        android:background="@color/cool_blue"
+        android:background="@color/gray"
         android:padding="5dp"
         android:scaleType="fitXY"
-        android:src="@drawable/edsheeran"
+        android:src="@drawable/ed_album"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/taylor" />
 
@@ -110,32 +116,34 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="20dp"
         android:text="Perfect"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/edsheeran"
         app:layout_constraintTop_toTopOf="@id/edsheeran" />
 
+    <!-- Song 3 -->
     <Button
         android:id="@+id/addToPlaylist2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="@color/rust"
         android:onClick="addToPlaylist"
         android:text="Add to Playlist"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/edsheeran"
         app:layout_constraintTop_toBottomOf="@id/song2Name" />
 
-    <!-- Song 3 -->
     <ImageView
         android:id="@+id/harrystyles"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
+        android:background="@color/gray"
         android:padding="5dp"
-        android:background="@color/cool_blue"
         android:src="@drawable/harrystyles"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edsheeran" />
@@ -147,6 +155,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:text="Watermelon Sugar"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/harrystyles"
@@ -156,12 +165,51 @@
         android:id="@+id/addToPlaylist3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="@color/rust"
         android:onClick="addToPlaylist"
         android:text="Add to Playlist"
-        app:layout_constraintStart_toStartOf="@id/song3Name"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/harrystyles"
         app:layout_constraintTop_toBottomOf="@id/song3Name" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="26dp"
+        android:text="By Taylor Swift"
+        android:textColor="@color/gray"
+        app:layout_constraintBottom_toTopOf="@+id/addToPlaylist1"
+        app:layout_constraintStart_toEndOf="@+id/taylor"
+        app:layout_constraintTop_toBottomOf="@+id/song1Name"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="34dp"
+        android:text="By Harry Styles"
+        android:textColor="@color/gray"
+        app:layout_constraintBottom_toTopOf="@+id/addToPlaylist3"
+        app:layout_constraintStart_toEndOf="@+id/harrystyles"
+        app:layout_constraintTop_toBottomOf="@+id/song3Name"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="0dp"
+        android:textColor="@color/gray"
+        android:text="By Ed Sheeran"
+        app:layout_constraintStart_toEndOf="@+id/edsheeran"
+        app:layout_constraintTop_toBottomOf="@+id/song2Name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
