--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,215 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/beige_back3"
-    tools:context=".MainActivity">
-
-    <!-- Toolbar -->
-
-    <!-- Song 1 -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:backgroundTint="@color/rust"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-
-        <!-- Logo Image -->
-        <ImageView
-            android:id="@+id/mmlogo"
-            android:layout_width="80dp"
-            android:layout_height="75dp"
-            android:layout_marginStart="85dp"
-            android:padding="8dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/new_logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- Title of the App -->
-        <TextView
-            android:id="@+id/app_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:text="@string/MixMaker"
-            android:textColor="@android:color/white"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/mmlogo"
-            app:layout_constraintTop_toTopOf="@+id/mmlogo" />
-    </androidx.appcompat.widget.Toolbar>
-
-    <ImageView
-        android:id="@+id/taylor"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="104dp"
-        android:background="@color/gray"
-        android:padding="5dp"
-        android:src="@drawable/taylor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Song 2 -->
-
-    <TextView
-        android:id="@+id/song1Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="4dp"
-        android:text="Lover"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/taylor"
-        app:layout_constraintTop_toTopOf="@id/taylor" />
-
-    <Button
-        android:id="@+id/addToPlaylist1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/rust"
-        android:onClick="addToPlaylist"
-        android:text="Add to Playlist"
-        android:textColor="@color/white"
-        android:textColorHighlight="#2196F3"
-        android:textColorLink="#CD2626"
-        app:layout_constraintStart_toEndOf="@+id/taylor"
-        app:layout_constraintTop_toBottomOf="@id/song1Name"
-        app:rippleColor="#80FFFFFF"
-        app:strokeColor="#CDDC39" />
-
-    <ImageView
-        android:id="@+id/edsheeran"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
-        android:background="@color/gray"
-        android:padding="5dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ed_album"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/taylor" />
-
-    <TextView
-        android:id="@+id/song2Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="20dp"
-        android:text="Perfect"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/edsheeran"
-        app:layout_constraintTop_toTopOf="@id/edsheeran" />
-
-    <!-- Song 3 -->
-    <Button
-        android:id="@+id/addToPlaylist2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/rust"
-        android:onClick="addToPlaylist"
-        android:text="Add to Playlist"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/edsheeran"
-        app:layout_constraintTop_toBottomOf="@id/song2Name" />
-
-    <ImageView
-        android:id="@+id/harrystyles"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
-        android:background="@color/gray"
-        android:padding="5dp"
-        android:src="@drawable/harrystyles"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edsheeran" />
-
-    <TextView
-        android:id="@+id/song3Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
-        android:text="Watermelon Sugar"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/harrystyles"
-        app:layout_constraintTop_toTopOf="@id/harrystyles" />
-
-    <Button
-        android:id="@+id/addToPlaylist3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/rust"
-        android:onClick="addToPlaylist"
-        android:text="Add to Playlist"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/harrystyles"
-        app:layout_constraintTop_toBottomOf="@id/song3Name" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="26dp"
-        android:text="By Taylor Swift"
-        android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/addToPlaylist1"
-        app:layout_constraintStart_toEndOf="@+id/taylor"
-        app:layout_constraintTop_toBottomOf="@+id/song1Name"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginBottom="34dp"
-        android:text="By Harry Styles"
-        android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/addToPlaylist3"
-        app:layout_constraintStart_toEndOf="@+id/harrystyles"
-        app:layout_constraintTop_toBottomOf="@+id/song3Name"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="0dp"
-        android:textColor="@color/gray"
-        android:text="By Ed Sheeran"
-        app:layout_constraintStart_toEndOf="@+id/edsheeran"
-        app:layout_constraintTop_toBottomOf="@+id/song2Name" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".MainActivity"
+    android:name = "androidx.navigation.fragment.NavHostFragment"
+    app:navGraph = "@navigation/nav_graph"
+    app:defaultNavHost = "true"
+    android:id="@+id/nav_host_fragment"/>
