--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@+id/loginFragment">
 
     <fragment
         android:id="@+id/loginFragment"
@@ -15,6 +15,25 @@
             android:id="@+id/action_loginFragment_to_searchFragment"
             app:destination="@+id/searchFragment"/>
 
+    </fragment>
+
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.musicapp.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/action_searchFragment_to_libraryFragment"
+            app:destination="@id/libraryFragment"
+            app:popUpTo="@id/loginFragment"/>
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/libraryFragment"
+        android:name="com.example.musicapp.LibraryFragment"
+        android:label="fragment_library"
+        tools:layout="@layout/fragment_library">
     </fragment>
 
 </navigation>
