--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -52,161 +52,129 @@
             app:layout_constraintTop_toTopOf="@+id/mmlogo" />
     </androidx.appcompat.widget.Toolbar>
 
+    <!-- Song 2 -->
+
+    <!-- Song 3 -->
+
+    <ImageView
+        android:id="@+id/edsheeran"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="124dp"
+        android:background="@color/gray"
+        android:padding="5dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ed_album"
+        app:layout_constraintStart_toEndOf="@+id/taylor"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/taylor"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="104dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="124dp"
         android:background="@color/gray"
         android:padding="5dp"
         android:src="@drawable/taylor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Song 2 -->
+    <ImageView
+        android:id="@+id/harrystyles"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="124dp"
+        android:background="@color/gray"
+        android:padding="5dp"
+        android:src="@drawable/harrystyles"
+        app:layout_constraintStart_toEndOf="@+id/edsheeran"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/song1Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
         android:text="Lover"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/taylor"
-        app:layout_constraintTop_toTopOf="@id/taylor" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taylor" />
 
-    <Button
-        android:id="@+id/addToPlaylist1"
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/rust"
-        android:text="Add to Playlist"
-        android:textColor="@color/white"
-        android:textColorHighlight="#2196F3"
-        android:textColorLink="#CD2626"
-        app:layout_constraintStart_toEndOf="@+id/taylor"
-        app:layout_constraintTop_toBottomOf="@id/song1Name"
-        app:rippleColor="#80FFFFFF"
-        app:strokeColor="#CDDC39" />
-
-    <ImageView
-        android:id="@+id/edsheeran"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
-        android:background="@color/gray"
-        android:padding="5dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ed_album"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text="By Taylor Swift"
+        android:textColor="@color/gray"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/taylor" />
+        app:layout_constraintTop_toBottomOf="@+id/song1Name" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="8dp"
+        android:text="By Harry Styles"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/song3Name" />
 
     <TextView
         android:id="@+id/song2Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="12dp"
         android:text="Perfect"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/edsheeran"
-        app:layout_constraintTop_toTopOf="@id/edsheeran" />
-
-    <!-- Song 3 -->
-    <Button
-        android:id="@+id/addToPlaylist2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/rust"
-        android:text="Add to Playlist"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/edsheeran"
-        app:layout_constraintTop_toBottomOf="@id/song2Name" />
-
-    <ImageView
-        android:id="@+id/harrystyles"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
-        android:background="@color/gray"
-        android:padding="5dp"
-        android:src="@drawable/harrystyles"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edsheeran" />
+        app:layout_constraintStart_toEndOf="@+id/song1Name"
+        app:layout_constraintTop_toBottomOf="@+id/edsheeran" />
 
     <TextView
         android:id="@+id/song3Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:text="Watermelon Sugar"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/harrystyles"
-        app:layout_constraintTop_toTopOf="@id/harrystyles" />
-
-    <Button
-        android:id="@+id/addToPlaylist3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/rust"
-        android:text="Add to Playlist"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/harrystyles"
-        app:layout_constraintTop_toBottomOf="@id/song3Name" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="26dp"
-        android:text="By Taylor Swift"
-        android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/addToPlaylist1"
-        app:layout_constraintStart_toEndOf="@+id/taylor"
-        app:layout_constraintTop_toBottomOf="@+id/song1Name"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginBottom="34dp"
-        android:text="By Harry Styles"
-        android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/addToPlaylist3"
-        app:layout_constraintStart_toEndOf="@+id/harrystyles"
-        app:layout_constraintTop_toBottomOf="@+id/song3Name"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@+id/song2Name"
+        app:layout_constraintTop_toBottomOf="@+id/harrystyles" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="0dp"
-        android:textColor="@color/gray"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="By Ed Sheeran"
-        app:layout_constraintStart_toEndOf="@+id/edsheeran"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/song2Name" />
+
+    <TextView
+        android:id="@+id/header_library"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:text="Your Library"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
