--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:background="@drawable/beige_back3">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TOOL Bar -->
 
 
     <androidx.appcompat.widget.Toolbar
