--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -72,7 +72,8 @@
         app:layout_constraintTop_toBottomOf="@+id/listView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:backgroundTint="@color/rust"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
